--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,18 @@
             "email": "martinllindstroem@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "anax/anax-cli": "^1.2"
+    },
 
     "require-dev": {
-        "phpunit/phpunit": "^7"
+        "phpunit/phpunit": "^7",
+        "anax/commons": "^2.0",
+        "anax/di": "^2.0",
+        "anax/configure": "^2.0",
+        "anax/request": "^2.0",
+        "anax/response": "^2.0",
+        "anax/view": "^2.0",
+        "anax/page": "2.0.0-beta.1"
     }
 }
